# Shanghaitech_CG_Homework

cs171-assignment2-murez/: CMakeLists.txt  README.md
cs171-assignment2-murez/bezier/: b-spline.bsp  bs1.bsf  teacup.bpt  teapot.bpt  teaspoon.bpt
cs171-assignment2-murez/include/: bezier.h  bpa.h  camera.h  defines.h  object.h  shader.h
cs171-assignment2-murez/report/: report.tex
cs171-assignment2-murez/shader/: fs.glsl  vs.glsl
cs171-assignment2-murez/src/: bezier.cpp  delaunator.cpp  main.cpp  object.cpp  shader.cpp  utils.cpp
cs171-assignment3-murez/: .clang-format  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
cs171-assignment3-murez/include/: camera.h  core.h  geometry.h  integrator.h  interaction.h  light.h  material.h  ray.h  scene.h  texture.h
cs171-assignment3-murez/libs/: Makefile  cmake_install.cmake
cs171-assignment3-murez/report/: report.tex
cs171-assignment3-murez/src/: CMakeLists.txt  Makefile  camera.cpp  cmake_install.cmake  geometry.cpp  integrator.cpp  light.cpp  main  main.cpp  material.cpp  ray.cpp  scene.cpp  texture.cpp
cs171-assignment4-murez/: .gitignore  CMakeLists.txt  README.md
cs171-assignment4-murez/include/: accel.h  brdf.h  camera.h  core.h  film.h  geometry.h  integrator.h  interaction.h  light.h  obj_loader.h  scene.h  utils.h
cs171-assignment4-murez/src/: CMakeLists.txt  accel.cpp  brdf.cpp  camera.cpp  film.cpp  geometry.cpp  integrator.cpp  light.cpp  main.cpp  obj_loader.cpp  scene.cpp
cs171-assignment5-murez/: .gitignore  CMakeLists.txt  README.md
(+24 files in other folders)
